--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,34 @@
 body{ 
+
+    width: 950px;
+    background-image: url(../Images/Background.png);
     font-size: 14px;
     font-family: "Leelawadee";
-    line-height: 20px;
     color: #454545;
  }
 
-h1{
+.header{
+    margin-top: -6px;
+    background-color: white;
+}
+
+.leftstr, .rightstr {
+    float: left; 
+    width: 50%; 
+}
+
+.rightstr {
+    text-align: right; 
+    line-height: 0px;
+}
+
+.nav {
+    text-align: justify;
+    float: left; 
+    
+}
+
+/* h1{
     font-size: 28px;
     font-weight: bold;
     margin: 10px 0;
@@ -32,3 +55,4 @@ h4{
     margin: 0px;
     line-height: 24px;
 }
+                            */
