--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,52 +1,199 @@
 body{ 
-
+    margin: 0 auto;
+    padding: 0;
     width: 950px;
     background-image: url(../Images/Background.png);
     font-size: 14px;
-    font-family: "Leelawadee";
+    font-family: 'Roboto', sans-serif;
     color: #454545;
- }
+}
+
+.line{
+    margin: -6px 0;  
+}
+
+.logo{
+    margin: 20px 10px 20px 30px;
+    /*width: 260px;            не срабатывает*/
+}
 
 .header{
-    margin-top: -6px;
-    background-color: white;
+    background: white;
+    width: 100%;
+    height: 171px;
+    box-sizing: border-box;
 }
 
-.leftstr, .rightstr {
+.leftstr, .rightstr{
     float: left; 
-    width: 50%; 
+    width: 440px; 
 }
 
-.rightstr {
-    text-align: right; 
-    line-height: 0px;
+.rightstr{
+    text-align: right;
+    margin: 10px -20px 0 5px; 
 }
 
-.nav {
+ul{
+    padding: 15px;
     text-align: justify;
-    float: left; 
+    line-height: 0;
+}
+
+ul:after{
+    width: 100%;
+    height: 0px;
+    content: "";
+    display: inline-block;
+} 
+
+ul li  {
+    display: inline-block;
+    line-height: normal;
+    font-size: 20px;
+}
+
+.navbt { 
+    background: white;
+    border-top: dotted 1px;  
+}
+
+.navbr{
+    padding-right: 20px;
+    border-right: dotted 1px;
+}
+
+.arrow-1{
+    position: absolute;
+    margin: 140px 0 0 -80px;
+}
+.arrow-2{ 
+    position: absolute;
+    margin: -215px 0 0 960px;
+}
+
+.content-text{
+    margin-top: -3px;
+    background-color: white;
+    height: 350px;
+}
+
+.column-1{
+    margin: 0 0 0 15px;
+    float: left;
+    width: 350px;
+}
+
+.column-2{
+    margin: 0 17px;
+    float: right;
+    width: 550px;
     
 }
 
-/* h1{
+a{ 
+    color: black;
+    text-decoration: none; 
+} 
+
+a.btn-1{
+  margin-top: 10px;
+  position: relative;
+  display: inline-block;
+  width: 120px;
+  height: 40px;
+  line-height: 2.7em;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 5px;
+  background: #1ea1c2;
+}
+
+a.btn-1:active {
+  top: 1.5px;
+  left: 1.5px;
+  box-shadow: 0 0 0 60px #0e6980 inset;
+}
+
+a.btn-2{
+    bottom: -20px;
+  position: relative;
+  display: inline-block;
+  width: 150px;
+  height: 40px;
+  line-height: 2.7em;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 5px;
+  background: #d22850;
+}
+
+a.btn-2:active {
+  top: 1.5px;
+  left: 1.5px;
+  box-shadow: 0 0 0 60px #0e6980 inset;
+}
+
+.strip-1{
+    position:relative;
+    bottom: -10px;
+}
+
+.strip-2{
+    position:relative;
+    bottom: -20px;
+    right: -10px;
+}
+
+.footer{
+    display: inherit;
+    height: 60px;
+    padding: 15px;
+    background-color: #f1f1f1;
+}
+
+.leftfoot, .rightfoot{
+    float: left; 
+    width: 455px; 
+}
+
+.rightfoot{
+    text-align: right;
+   
+}
+
+p{
+    margin: 20px -5px;
+    padding: 0px;
+    line-height: 5px;
+}
+
+h1{
     font-size: 28px;
-    font-weight: bold;
+    font-weight: 100;
     margin: 10px 0;
     line-height: 40px;
 }
 
 h2{
-    font-size: 22px;
-    font-weight: bold;
-    line-height: 40px;
+    margin: 5px 0;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 50px;
     color: #1ea1c2;
 }
 
 h3{
     font-size: 16px;
     font-weight: 500;
-    margin: 0px;
+    padding-top: 10px;
     line-height: 26px;
+    margin-top: -15px;
+    color: #818181;
 }
 
 h4{
@@ -54,5 +201,17 @@ h4{
     font-weight: 500;
     margin: 0px;
     line-height: 24px;
+    color: #bababa;
 }
-                            */
+
+h5{
+    color: grey;
+}
+                
+h6{
+    font-size: 14px;
+    font-weight: 500;
+    margin: 0px;
+    line-height: 24px;
+    color: #494949;
+}
